...
    <string name="rider_work_label">Work\n</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="phone">Phone</string>
    <string name="unknown_error">Something went wrong. Please try again later.</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_telephone">tel:</string>
    <string name="text_regular_car_label">Regular</string>
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
...
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>

    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
    <string name="ride_request_description">Your current ride request type is now set to the following categories. You are set to receive:\n\n</string>
...
    <string name="text_this_week">This Week:</string>
    <string name="text_header_number_nof_trips">NUMBER\nOF TRIPS</string>
    <string name="text_header_total_fare">TOTAL\nFARE</string>
    <string name="text_header_total_ra_fee">TOTAL RA\nFEE</string>
    <string name="text_header_total_earnings">TOTAL\nEARNINGS</string>
    <string name="ride_cancelled">Trip was cancelled</string>
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
    <string name="text_trips_header">Trips</string>
    <string name="text_your_earning">Your earning</string>
    <string name="text_ride_service_fee">%1$s Fee</string>
    <string name="text_total_fare">Total Fare</string>
...
    <string name="cant_find_app_for_call">Can\'t find application to call</string>
    <string name="cant_find_app_to_send_message">Can\'t find application to send message</string>
    <string name="tips">TIPS</string>
    <string name="tip">Tip</string>
    <string name="rider_cancel_fee">Rider Cancellation Fee</string>
    <string name="send_report">Report defect</string>
    <string name="text_cancel_ride_confirmation">Are you sure you want to cancel ?</string>

    <string name="dynamic_queue_name">%1$s Queue</string>
    <string name="queue_in_number_info">Numbers represent your current spot\n in queue</string>
    <string name="queue_out_number_info">Numbers represent amount of drivers in the %s queue</string>
    <string name="queue_leaving_area_desc"> You have left the queue zone and have been removed from the queue</string>
    <string name="queue_leaving_inactive_desc">You have been removed from the queue because you were offline</string>
...
    <string name="direct_connect_new_id">Get new driver ID</string>
    <string name="direct_connect_id_hint">- - - - -</string>
    <string name="direct_connect_request_car_type">Direct Connect: %s</string>
    <string name="direct_connect_request_car_type_w_surge">Direct Connect:\n%s</string>

    <!-- Stacked rides -->
    <string name="stacked_ride_next_ride">Next Ride</string>
    <string name="stacked_ride_ride_not_found">Something went wrong. Ride not found</string>
    <string name="stacked_ride_dialog_title">Your Next Ride</string>
    <string name="stacked_ride_dialog_pickup">Pickup Address</string>
    <string name="stacked_ride_dialog_cancel">Cancel Pickup</string>

</resources>

