<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rideaustin.ui.stacked.NextRideDialogViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
...
            android:paddingTop="50dp"
            android:paddingBottom="25dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/title"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/stacked_ride_dialog_title"
                android:textColor="@color/charcoalGrey"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@{viewModel.avatar}"
...
                    android:textColor="#070D17"
                    android:singleLine="true"
                    android:text="@{viewModel.name}"
                    tools:text="James Watson" />

                <TextView
                    android:id="@+id/category"
                    style="@style/MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#919499"
                    android:textAllCaps="true"
...
                android:textAllCaps="true"
                android:textColor="#070D16"
                android:text="@string/stacked_ride_dialog_pickup"
                android:visibility="@{!viewModel.loading}"/>

            <TextView
                android:id="@+id/cancel"
                style="@style/MontserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="#070D16"
                android:text="@string/stacked_ride_dialog_cancel"
                android:layout_alignBottom="@id/address_title"
                android:layout_alignParentRight="true"
                android:visibility="@{!viewModel.loading}" />

            <TextView
                android:id="@+id/address"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_below="@id/address_title"
...
                android:text="@{viewModel.address}"
                android:textColor="@color/charcoalGrey"
                tools:text="K.R.Layout, J P Nagar 6th Phase, Austin, Texas"
                android:visibility="@{!viewModel.loading}"/>

            <LinearLayout
                android:id="@+id/call"
                style="@style/Button.RoundedBlueButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_below="@id/address"
...
