...
                        android:padding="@dimen/avatar_margin_top"
                        android:visibility="gone"
                        tools:src="@drawable/ic_user_icon"
                        tools:visibility="gone" />

                    <ImageView
                        android:id="@+id/app_title_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:cropToPadding="true"
                        android:padding="@dimen/avatar_margin_top"
                        android:scaleType="fitCenter"
...
                    <RelativeLayout
                        android:layout_width="120dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/toolbarActionButton"
                            style="@style/Toolbar.ActionButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_toolbar_action_fatal"
                            tools:background="@drawable/bg_toolbar_action_warn"
                            tools:ignore="RtlSymmetry"
...
