...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <android.support.v7.widget.CardView
            android:id="@+id/pickup_destination_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_widget_margin"
            android:layout_marginRight="@dimen/basic_widget_margin"
            android:layout_marginTop="@dimen/basic_widget_margin">

...
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/next"
                style="@style/Button.Button.Navigation.Dark"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/stacked_ride_next_ride"
                android:visibility="gone" />
...
